--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@octokit/rest": "^19.0.7",
     "axios": "^1.4.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "poseidon-lite": "^0.3.0"
   }
-} 
+}
